# co_navi_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  readme.md
config/: configs.yaml  drone_config.yaml
control_ui/: app.py
control_ui/templates/: index.html
doc/: IMU_Integration_Improvements.md  README.md
include/co_navi_pkg/: cooperative_localization.hpp  hpFnc.hpp  lidar_imu_icp_fusion.hpp  vision_imu_GPS_fusion.hpp  vision_imu_fusion.hpp  vision_imu_fusion_hp.hpp
launch/: co_navi.launch  ekf_fusion_IG.launch  fusion_IL.launch  fusion_IL_improved.launch  map_drones_generator.launch  odom_2_gps_imu.launch  odom_pub_fusion_imu_gps.launch
launch/Heterogeneous/: cars.launch  co_navi_hetero.launch  map_drones_generator.launch  single_car.launch
launch/Heterogeneous/run_file/: advanced_param.xml  run_in_sim.launch  simulator.xml
launch/ModelTest/: fusion_iv_test.launch
launch/high_speed/: co_navi_high.launch  drones.launch  line_traj_generator.launch  map_drones_generator.launch  single_drone.launch
launch/high_speed/FinalTest/: F_high_cooperative_navi.launch  F_high_imu_gps.launch  F_high_imu_vision.launch  F_high_imu_vision_high_precision.launch
launch/high_speed/run_files/: advanced_param.xml  high_default.rviz  run_in_sim.launch  rviz.launch  simulator.xml
launch/low_speed/: co_navi.launch  co_navi_low.launch  drones.launch  map_drones_generator.launch  odom_2_gps_imu.launch  single_drone.launch
launch/low_speed/FinalTest/: F_low_cooperative_navi.launch  F_low_cooperative_navi_hetero.launch  F_low_imu_gps.launch  F_low_imu_vision.launch  (+1 more)
launch/methods/: logs_error_analysis.launch  odom_2_gps_imu.launch
launch/mid_speed/: co_navi_mid.launch  drones.launch  single_drone.launch
launch/no need/: lidar_imu_fusion.hpp
no need/: lidar_imu_icp_fusion.hpp
scripts/: co_loc_diff.py  distance_calculator.py  error_analysis.py  error_analysis2.py  imu_gps_publisher.py  imu_gps_publisher_hp.py  imu_integrator.py  imu_integrator2.py  imu_integrator_test.py  line_pub.py  logs_plot.py  logs_save.py  odom_to_gps_imu.py  odom_to_gps_imu_improved.py  path_vis.py  utils.py  velocity_writer.py
src/: IMU_GPS_eskf_fusion.cpp  IMU_Lidar_fusion_ds.cpp  IMU_Vision_GPS_fusion.cpp  IMU_Vision_fusion.cpp  IMU_Vision_fusion_hp.cpp  cooperative_localization_node.cpp  eskf_fusion_IG_node.cpp
(+16 files in other folders)
